[gd_scene load_steps=13 format=2]

[ext_resource path="res://Jugador/Jugador.gd" type="Script" id=1]
[ext_resource path="res://Jugador/priest1_v1_1-sheet.png" type="Texture" id=2]
[ext_resource path="res://Jugador/InterfazJugador.tscn" type="PackedScene" id=3]
[ext_resource path="res://Items/EspadaRegular.png" type="Texture" id=5]
[ext_resource path="res://Jugador/Hurtbox.tscn" type="PackedScene" id=6]
[ext_resource path="res://Jugador/Hitbox.tscn" type="PackedScene" id=7]

[sub_resource type="Animation" id=2]
resource_name = "Andar"
length = 0.4
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=7]
resource_name = "Idle"
length = 0.8
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 0, 1, 2, 3 ]
}

[sub_resource type="Animation" id=3]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0 ]
}

[sub_resource type="Animation" id=5]
resource_name = "Ataque"
length = 0.2
tracks/0/type = "value"
tracks/0/path = NodePath("Position2D/Hitbox/Arma:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ true, false ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Position2D/Hitbox/CollisionShape2D:disabled")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 1,
"values": [ false, true ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("Position2D/Hitbox:rotation_degrees")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0, 0.2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ -45.0, 45.0 ]
}

[sub_resource type="Animation" id=6]
length = 0.001

[sub_resource type="CapsuleShape2D" id=1]
radius = 3.2897
height = 6.44229

[node name="Jugador" type="KinematicBody2D" groups=["jugador"]]
collision_mask = 9
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -7 )
texture = ExtResource( 2 )
hframes = 4

[node name="AnimacionPersonaje" type="AnimationPlayer" parent="Sprite"]
root_node = NodePath("../..")
anims/Andar = SubResource( 2 )
anims/Idle = SubResource( 7 )
anims/RESET = SubResource( 3 )

[node name="AnimacionEquipo" type="AnimationPlayer" parent="."]
anims/Ataque = SubResource( 5 )
anims/RESET = SubResource( 6 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( -0.530334, -3.11092 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Camera2D" type="Camera2D" parent="."]
current = true

[node name="InterfazJugador" parent="." instance=ExtResource( 3 )]

[node name="Hurtbox" parent="." instance=ExtResource( 6 )]
collision_layer = 32

[node name="Position2D" type="Position2D" parent="."]
position = Vector2( 0, -7 )

[node name="Hitbox" parent="Position2D" instance=ExtResource( 7 )]
rotation = 0.785398
collision_mask = 64

[node name="CollisionShape2D" parent="Position2D/Hitbox" index="0"]
position = Vector2( 12, 0 )
disabled = true

[node name="Arma" type="Sprite" parent="Position2D/Hitbox"]
visible = false
position = Vector2( 13, 0 )
rotation = 1.5708
scale = Vector2( 0.7875, 0.921131 )
texture = ExtResource( 5 )

[connection signal="damageRecivido" from="Hurtbox" to="." method="_on_Hurtbox_damageRecivido"]

[editable path="Position2D/Hitbox"]
